# add_furni_gui

./: CMakeLists.txt  README.md  package.xml  plugin_description.xml
include/add_furni_gui/: AddFurniNode.h  AddFurniPanel.h  furni-yaml.h
launch/: test.launch
msg/: Furni.msg  FurniWithName.msg
rviz/: default.rviz
src/: AddFurniNode.cpp  AddFurniPanel.cpp  add_furni_gui_node.cpp
srv/: OpenFile.srv
yaml/: furniture.yaml  output.yaml
