<?xml version="1.0"?>
<package format="2">
  <name>add_furni_gui</name>
  <version>0.0.0</version>
  <description>The add_furni_gui package</description>

  <maintainer email="lemonsawa@todo.todo">lemonsawa</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  
  <depend>yaml-cpp</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>pluginlib</depend>
  <depend>rviz</depend>
  <depend>qtbase5-dev</depend>
  
  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
